# audioviz

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  airpixel.json  airpixel.yaml  audio_tools.py  audioviz.service  config.py  data_dump.py  dev_deploy.sh  dev_install.sh  effects.py  frahm.py  makefile  monitor.yaml  netplan.yaml  nodes.py  pyproject.toml  quickdeploy.sh  requirements.txt  requirements_base.txt  requirements_dev.txt  rpi_setup.md  run.py  run.sh  run_star.py  run_star.sh
.github/workflows/: rpi_image.yaml
audioviz/: audio_tools.py  calibrate.py  computation_graph.py  computations.py  nodes.py  star.py
audioviz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
builder/: Dockerfile  build.sh
ring/: Pipfile
ring/ring/: a_weighting_table.py  audio_tools.py  config.py  effects.py  gamma_table.py  mock_audio.py  profiler.py  qt5_client.py  ring_client.py  run.py
ring_client/: Pipfile  audio_tools.py  config.py  effects.py  main.py  profiler.py  qt5_client.py  ring_client.py  run.py
tcp_to_led/: tcp_to_led.ino
test/: test_computations.py
