[tool.poetry]
name = "audioviz"
version = "0.1.0"
description = "A basic package template"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pytest = {version = "^5.4.2", optional = true}
black = {version = "^19.10b0", optional = true}
mypy = {version = "^0.770", optional = true}
flake8 = {version = "^3.8.1", optional = true}
numpy = "1.19.1"
pyalsaaudio = "0.9.0"
scipy = "1.5.2"
pypiper = "^0.5.3"
airpixel = "^0.9"
readable_log_formatter = "^0.1.4"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
tox = "^3.15.0"
airpixel = {extras = ["monitoring"], version = "^0.9"}
graphviz = "^0.14.2"

[tool.poetry.extras]
test = ["pytest"]
typecheck = ["mypy"]
lint = ["black", "flake8"]

[tool.tox]
legacy_tox_ini = """

[tox]
isolated_build = true
envlist = lint,typecheck,test

[testenv:lint]
extras =
    lint
commands =
    black airpixel tests {tty::--diff}
    flake8 airpixel tests --max-line-length=88 --ignore=E203,W503

[testenv:typecheck]
extras =
    typecheck
commands =
    mypy airpixel --disallow-untyped-defs

[testenv:test]
extras =
    test
commands =
    pytest
"""
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

