[tool.poetry]
name = "audioviz"
version = "0.1.0"
description = "A basic package template"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.19.1"
pypiper = "^0.5.3"
airpixel = "^0.9"
readable_log_formatter = "^0.1.4"
mupa-client = "^0.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

